Try to change to JDK 8